fetch video from x

--- a/aws-s3-app/src/App.css
+++ b/aws-s3-app/src/App.css
@@ -1,24 +1,81 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
-  margin-top: 50px;
+.form-container {
+  display: flex;
+  flex-direction: column;          
+  justify-content: center;         
+  align-items: center;             
+  max-width: 500px;                
+  width: 80%;                     
+  background-color: #f5f5f5;      
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
+  border-radius: 10px;            
+  border: 1px solid #ccc;          
+  margin: 20px auto;               
+  padding: 20px;                  
 }
 
-form {
-  display: inline-block;
-  text-align: left;
+.input-form {
+  width: 100%;                     
 }
 
-input {
-  margin-bottom: 10px;
-  padding: 5px;
-  width: 200px;
+.form-group {
+  display: flex;                   
+  justify-content: center;         
+  align-items: stretch;            
+  gap: 10px;                      
+  width: 100%;                     
+}
+
+input[type="email"] {
+  flex: 1;                        
+  padding: 10px;                  
+  border: 1px solid #ccc;        
+  border-radius: 5px;            
+  height: 20px;                   
 }
 
 button {
-  padding: 5px 10px;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  border-radius: 5px;
+  padding: 10px;             
+  background-color: #691d1d;      
+  color: white;                    
+  border: none;                   
+  border-radius: 5px;             
+  cursor: pointer;                 
+  transition: background-color 0.3s; 
+  height: 40px;                 
+}
+
+button:hover {
+  background-color: #0056b3;    
+}
+
+.response-message {
+  margin-top: 15px;                
+  color: rgb(11, 12, 11);                    
+  text-align: center;              
+}
+
+@media (max-width: 600px) {
+  
+  .form-container {
+    padding: 15px;                 
+  }
+
+  input[type="email"],
+  button {
+    font-size: 16px;               
+  }
+}
+h1 {
+  text-align: center;     
+  font-size: 20px;        
+  font-weight: bold;     
+  margin-top: 16px;       
+  margin-bottom: 10px;    
+}
+.newsletter-info {
+  text-align: center;
+  font-size: 20px;
+  margin: 10px;
+  color: #575454;
+  line-height: 1.5;
 }
